# Touchtris

./: README.md  settings.gradle.kts  verysecurekeystorelol
app/: CMakeLists.txt  build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/mitchelllustig/touchtris/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: TouchtrisAudio.cpp  TouchtrisAudio.h  TouchtrisBuffer.cpp  TouchtrisBuffer.h  TouchtrisJNI.cpp
app/src/main/java/com/mitchelllustig/touchtris/: MainActivity.kt  TouchtrisApp.kt
app/src/main/java/com/mitchelllustig/touchtris/audio/: AudioPlayer.kt  NativeAudioBridge.kt
app/src/main/java/com/mitchelllustig/touchtris/data/: FallSpeeds.kt  GameBoard.kt  Orientations.kt  Pieces.kt  Point.kt  Positions.kt  Scoring.kt  SquareColorInfo.kt
app/src/main/java/com/mitchelllustig/touchtris/database/: HighScore.kt  TouchtrisDB.kt
app/src/main/java/com/mitchelllustig/touchtris/extensions/: CanvasExtensions.kt  MutableStateFlowExtensions.kt
app/src/main/java/com/mitchelllustig/touchtris/hilt/: SingletonModule.kt
app/src/main/java/com/mitchelllustig/touchtris/settings/: AppSettings.kt  ContinueSettings.kt  GameSettings.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/mitchelllustig/touchtris/: ExampleUnitTest.kt
app/src/test/java/com/mitchelllustig/touchtris/audio/: AudioPlayerTest.kt
(+69 files in other folders)
